Return HistoryDTO instead of OperationResultDTO in HistoryViewRestController
I'm so *** tired of this stumbling on level ground with Java! Asserting only array size. 'Cause LocalDate deserialization solutions from web don't really work